# keep-track

./: .gitignore  docker-compose-dev.yml  docker-compose.yml  manage.py  pyproject.toml
customers/: admin.py  forms.py  models.py  urls.py  views.py
customers/templates/: customers.html
keeptrack/: asgi.py  settings.py  urls.py  wsgi.py
products/: admin.py  forms.py  models.py  urls.py  views.py
products/templates/: products.html
templates/: base.html
