[tool.poetry]
name = "keeptrack"
version = "0.1.0"
description = ""
authors = ["Tarang Ambaliya <taranga@webelight.co.in>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
psycopg2 = "^2.9.5"
django-environ = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
